--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "less": "^4.1.2",
     "lite-server": "^2.3.0"
   },
   "dependencies": {
